<resources>
    <string name="app_name">LanguageLearning</string>
    <string name="let_s_get_you">Let\'s get you</string>
    <string name="set_up">Set up!</string>
    <string name="person_image">person_image</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome">Welcome</string>
    <string name="student">Student</string>
    <string name="let_s_start_learning">Let\'s Start Learning!</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need An Account?</string>
    <string name="please_input_the_language_and_topic_you_wanna_to_learn_today">Please input the language and the topic you wanna to learn today!</string>
    <string name="language">Language</string>
    <string name="topic">Topic</string>
    <string name="let_s_start_your_quiz">Let\'s start your quiz</string>
    <string name="let_s_start_reading_comprehension">Let\'s start reading comprehension</string>
    <string name="tracnslation_help">Tracnslation Help</string>
    <string name="let_s_start_writing_exercise">Let\'s start writing exercise</string>
    <string name="let_s_generate_your_vocabulary">Let\'s generate your vocabulary</string>
    <string name="questions_here">questions here</string>
    <string name="image_ai">image ai</string>
    <string name="generated_by_ai">Generated by AI</string>
    <string name="score">score</string>
    <string name="let_s_chat_with_ai">Let\'s chat with AI</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_image">send image</string>
    <string name="check">Check</string>
    <string name="writing_task">Writing Task:</string>
    <string name="your_result">Your result:</string>
    <string name="go_back">Go Back</string>
</resources>