<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:padding="16dp">

<!--title here-->
    <TextView
        android:id="@+id/registerTitle_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/let_s_get_you"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/set_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTitle_one"
        android:layout_marginStart="20dp"
        android:text="@string/set_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

<!--imageview-->
    <ImageView
        android:id="@+id/image_person_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/registration_imageview_bg"
        android:contentDescription="@string/person_image"
        android:padding="20dp"
        android:src="@drawable/person_add" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_person_add"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username"
        android:padding="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirmEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/confirm_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <android.widget.Button
        android:id="@+id/buttonRegister"
        android:background="@drawable/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_account" />

</RelativeLayout>